--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pillow = "*"
 Authlib = "*"
 pyramid_exclog = "*"
 pyramid-beaker = "*"
+psycopg = "^3.2.12"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "*"
